index.html uploaded

--- a/02-Multi-page-calculater/index.html
+++ b/02-Multi-page-calculater/index.html
@@ -109,7 +109,7 @@
                     <button class="jump_step">Next Step</button>
                 </div>
             </div>
-            <div class="step3_page3">
+            <div  class="step3_page3">
                 <h1>Pick add-ons</h1>
                 <p>Add-ons help enhance your gaming experience.</p>
 
@@ -156,7 +156,7 @@
                     <button class="next_part4">Next Step</button>
                 </div>
             </div>
-            <div class="step4_page">
+            <div style="display: block;" class="step4_page">
                 <h1>Finishing up</h1>
                 <p>Double-check everthing looks OK before confirming</p>
                 <div class="calculater">
@@ -192,17 +192,18 @@
                     <button>Next Step</button>
                 </div>
             </div>
+            <div class="page_end">
+                <div class="box">
+                    <div class="complite_img">
+                        <img src="./assets/images/icon-thank-you.svg" alt="">
+                    </div>
+                    <h2 class="thainks_you">Thank you!</h2>
+                    <p class="ravi_gmail">Thanks for confirming you subscription! We hope you have fun using platform.
+                        if you ever need support, plese feel free to email Us at Raviranajnmishra767@gmail.com</p>
+                </div>
+            </div> 
         </div>
     </header>
-
-
-
-
-
-
-    <footer>
-        <img src="./multi-step-form-main/design/active-states-step-4.jpg" alt="">
-    </footer>
 </body>
 
 </html>
