--- a/02-Multi-page-calculater/index.html
+++ b/02-Multi-page-calculater/index.html
@@ -156,7 +156,7 @@
                     <button class="next_part4">Next Step</button>
                 </div>
             </div>
-            <div style="display: block;" class="step4_page">
+            <div class="step4_page">
                 <h1>Finishing up</h1>
                 <p>Double-check everthing looks OK before confirming</p>
                 <div class="calculater">
