index.html uploaded

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <ul>
     <li><a href="./01-browser-extensions-manager-ui-main/">01-browser-extensions-manager-ui-main</a></li>
     <li><a href="./02-Multi-page-calculater/">02-Multi-page-calculater</a></li>
+    <li><a href="./03-GradientGallery/">03-GradientGallery</a></li>
   </ul>
 </body>
 
