--- a/05-API-MEME/index.html
+++ b/05-API-MEME/index.html
@@ -13,7 +13,7 @@
         <div class="meme-container">
             <h1 class="meam-title">Hit the Create meam button</h1>
             <div class="img-con">
-                <img class="meam-img" src="./assets/hit.png" alt="">
+                <img class="meam-img" src="./assets/hit.png" alt="Image not loading, please use VPN and try again">
             </div>
             <p class="auther">Made by: <span >raviranjan kumar</span></p>
         </div>
