index.html uploaded

--- a/06-Password-Generator/index.html
+++ b/06-Password-Generator/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scrpit.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -25,11 +25,11 @@
             </div>
 
             <div>
-                
+
                 <input type="checkbox" id="numbers">
                 <label for="numbers">Numbers</label>
             </div>
-            
+
             <div>
                 <input type="checkbox" id="characters">
                 <label for="characters">Characters</label>
