--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <li><a href="./01-browser-extensions-manager-ui-main/">01-browser-extensions-manager-ui-main</a></li>
     <li><a href="./02-Multi-page-calculater/">02-Multi-page-calculater</a></li>
     <li><a href="./03-GradientGallery/">03-GradientGallery</a></li>
+    <li><a href="./04-TO-DO-APK/">04-TO-DO-APK</a></li>
     <li><a href="./05-API-MEME/">05-API-MEME</a></li>
+    <li><a href="./06-Password-Generator/">06-Password-Generator</a></li>
   </ul>
 </body>
 
